fixed spacing, reconfigured footer/links

--- a/src/App.css
+++ b/src/App.css
@@ -74,27 +74,30 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   width: 100%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   background-size: cover !important;
-  padding: 300px 0;
+  padding: 30px 0;
   color: white;
 }
 
 .text-overlay {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-weight: 150;
   font-size: 75px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5%;
 }
 
 .under-text-overlay {
-  position: absolute;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
   top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  margin-bottom: 25%;
   font-weight: 150;
   font-size: 25px;
 }
@@ -107,7 +110,7 @@
 .home-header-bio {
   display: flex;
   flex-direction: row;
-  padding: 5%;
+  padding: 10%;
   background: rgb(232, 240, 247);
 }
 
@@ -117,9 +120,9 @@
   flex-direction: row;
   font-size: 75px;
   font-weight: 200;
+  margin: auto;
+  margin-left: 15%;
   margin-right: 20%;
-  margin-left: 20%;
-  margin-bottom: 10%;
 }
 
 .home-bio {
@@ -127,10 +130,11 @@
   justify-content: right;
   flex-direction: column;
   font-size: 18px;
-  margin-top: 7%;
+  margin: auto;
+  margin-right: 15%;
   font-weight: 200;
   line-height: 150%;
-  margin-right: 10%;
+  min-width: 200px;
 }
 
 .experience-section {
@@ -144,7 +148,7 @@
   width: 30%;
   height: 30%;
   display: flex;
-  margin-right: 12%;
+  margin-right: 20%;
 }
 
 .home-exp-info {
@@ -152,9 +156,9 @@
   flex-direction: column;
   font-size: 25px;
   font-weight: 200;
+  margin: auto;
   margin-left: 20%;
-  margin-right: 15%;
-  margin-top: 8%;
+  margin-right: 10%;
 }
 
 .exp-button {
@@ -181,12 +185,9 @@
 .photo-section-header {
   font-weight: 150;
   font-size: 35px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  /* margin-left: 25%; */
+  margin: auto;
   margin-bottom: 20%;
-  margin-top: 5%;
+  margin-top: 10%;
   color: black;
 }
 
@@ -195,11 +196,10 @@
   flex-direction: column;
   list-style-type: none;
   text-decoration: none;
-  margin-top: 30px;
-  margin-right: 55%;
+  margin: auto;
+  margin-top: 5%;
   align-items: center;
   justify-content: center;
-  margin-left: 49.5%;
 }
 
 .ttb {
@@ -212,9 +212,9 @@
 }
 
 .ttb-info {
+  margin: auto;
+  margin-right: 17%;
   margin-left: 10%;
-  margin-right: 15%; 
-  margin-top: 5%;
   min-width: 300px;
   font-size: 18px;
   display: flex;
@@ -227,16 +227,16 @@
 .tech-together-logo {
   display: flex;
   height: 109.42px;
-  margin-left: 15%;
-  margin-top: 8%;
-  margin-bottom: 8%;
+  margin: auto;
+  margin-left: 17%;
 }
 
 .desktop-metal {
   display: flex;
   flex-direction: row;
   background: white;
-  padding: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   width: 100%;
 }
 
@@ -245,15 +245,15 @@
   flex-direction: row;
   width: 320px;
   height: 320px;
-  margin-right: 15%;
-  margin-bottom: 3%;
+  margin: auto;
+  margin-right: 17%;
 }
 
 .dm-info {
   display: flex;
-  margin-left: 10%;
+  margin: auto;
+  margin-left: 17%;
   margin-right: 10%;
-  margin-top: 5%;
   min-width: 300px;
   flex-direction: row;
   font-size: 18px;
@@ -265,28 +265,27 @@
   display: flex;
   flex-direction: row;
   background: rgb(232, 240, 247);
-  padding: 5%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .digital-lumens-logo {
-  margin-left: 100px;
+  margin: auto;
   display: flex;
   height: 110px;
-  margin-top: 8%;
-  margin-bottom: 8%;
-  margin-left: 8%;
+  margin-left: 16%;
+  margin-right: 10%;
 }
 
 .dl-info {
   display: flex;
-  margin-left: 10%;
-  margin-right: 13%;
+  margin: auto;
+  margin-right: 17%;
   flex-direction: column;
   font-size: 18px;
   font-weight: 200;
-  line-height: 150%;
-  margin-top: 8%;
   min-width: 300px;
+  line-height: 150%;
 }
 
 .ert {
@@ -294,19 +293,19 @@
   flex-direction: row;
   background: white;
   width: 100%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .ert-info {
   display: flex;
-  margin-left: 15%;
-  margin-bottom: 12%;
-  margin-top: 5%;
+  margin: auto;
+  margin-left: 17%;
   margin-right: 10%;
   flex-direction: column;
   font-size: 18px;
   font-weight: 200;
   line-height: 150%;
-  margin-top: 13%;
   min-width: 300px;
 }
 
@@ -314,30 +313,10 @@
   display: flex;
   width: 289px;
   height: 204px;
-  margin-right: 15%;
-  margin-top: 11%;
+  margin: auto;
+  margin-right: 17%;
 }
 
-.more-section {
-  display: flex;
-  flex-direction: row;
-  background: rgb(232, 240, 247);
-  padding: 5%;
-}
-
-.resume-button {
-  list-style-type: none;
-  text-decoration: none;
-  margin-top: 30px;
-  margin-left: 30%;
-}
-
-.website-code-button {
-  list-style-type: none;
-  text-decoration: none;
-  margin-top: 30px;
-  margin-left: 20%;
-}
 
 .photography-page {
   background: rgb(232, 240, 247);
@@ -354,7 +333,7 @@
 .photo-row1 {
   display: flex;
   flex-direction: row;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .photo-row2, .photo-row3 {
@@ -412,12 +391,38 @@
   height: 10%;
 } 
 
+.resume {
+  color: white;
+  text-align: center;
+  flex-direction: column;
+  margin-top: 2%;
+  padding-bottom: 1%;
+}
+
+.resume-link {
+  color: white;
+}
+
 .disclaimer {
   color: white;
   text-align: center;
   flex-direction: column;
-  margin-top: 3%;
   padding-bottom: 5%;
+}
+
+.backlog-link {
+  color: white;
+}
+
+.website-code {
+  color: white;
+  text-align: center;
+  flex-direction: column;
+  padding-bottom: 1%;
+}
+
+.code-link {
+  color: white;
 }
 
 /* @keyframes App-logo-spin {
